--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.0.5",
-    "next": "14.0.2",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-ionicons": "^4.2.1"
