--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-ionicons": "^4.2.1"
+    "react-ionicons": "^4.2.1",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
