--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@nextui-org/react": "^2.2.9",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "lucide-react": "^0.334.0",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-ionicons": "^4.2.1",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
