--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.46.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.14",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.0.0",
     "next": "^14.1.0",
@@ -23,7 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.2",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^7.6.10",
