--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.46.0",
+    "@vercel/speed-insights": "^1.0.11",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
     "gray-matter": "^4.0.3",
